# rs-schedule-server

./: Cargo.toml
src/: main.rs  schedule.rs
src/serve/: actions.rs  html_gen.rs  mod.rs
