[package]
name = "rs-schedule-server"
version = "0.3.0"
authors = ["Daniel Smith <daniel@smitbo.com>"]
edition = "2018"

[dependencies]
hyper = {version = "0.13", features = ["stream"]}
futures = "0.3"
tokio = {version = "0.2", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "1.0"
chrono = "0.4.6"
