[package]
name = "rs-schedule-server"
version = "0.3.3"
authors = ["Daniel Smith <daniel@smitbo.com>"]
edition = "2018"

[dependencies]
hyper = {version = "0.14", features = ["server","client","stream","http1","http2","runtime"]}
futures = "0.3"
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.1"
chrono = "0.4"
